--- a/scheduler.test/scheduler.test.csproj
+++ b/scheduler.test/scheduler.test.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\scheduler.job\scheduler.job.csproj" />
+  </ItemGroup>
+
 </Project>
